fix gradients bug on Safari

--- a/src/components/CountryPage/style.css
+++ b/src/components/CountryPage/style.css
@@ -196,7 +196,7 @@
 .rightInfoWrapper:after {
   bottom: 0;
   height: 30px;
-  background: linear-gradient(0deg, #fff 20%, transparent);
+  background: linear-gradient(0deg, #fff 20%, rgba(255, 255, 255, .01));
 }
 .rightInfo {
   padding: 15px 12px 20px 26px;
