--- a/src/components/GeoPage/style.css
+++ b/src/components/GeoPage/style.css
@@ -119,6 +119,7 @@
   display: flex;
   padding-left: 22px;
   height: 100%;
+  overflow: auto;
 }
 .columnRight::-webkit-scrollbar {
   background: transparent;
@@ -220,7 +221,7 @@
 .definitionWrapper:after {
   bottom: 0;
   height: 30px;
-  background: linear-gradient(0deg, #fff 20%, transparent);
+  background: linear-gradient(0deg, #fff 20%, rgba(255, 255, 255, .01));
 }
 .rightInfo {
   flex: 1 1 auto;
